Fix mobile horizontal overflow by adding overflow-x hidden to body

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ body {
     font-size: 16px;
     line-height: 1.75;
     color: var(--body);
+    overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
